--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "docusaurus start --port=3015",
     "build": "docusaurus build",
     "clear": "docusaurus clear",
-    "serve": "docusaurus serve",
+    "serve": "docusaurus serve --build --port 3015",
     "swizzle": "docusaurus swizzle --typescript",
     "write-translations": "docusaurus write-translations",
     "write-heading-ids": "docusaurus write-heading-ids",
