--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -16,4 +16,4 @@ jobs:
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./.vuepress/dist
-        cname: pterodactyl.top
+        cname: docs.vlssu.com
