--- a/package.json
+++ b/package.json
@@ -15,10 +15,10 @@
     "format": "prettier . --write"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.17",
-    "@docusaurus/plugin-pwa": "2.0.0-beta.17",
-    "@docusaurus/preset-classic": "2.0.0-beta.17",
-    "@docusaurus/theme-classic": "2.0.0-beta.17",
+    "@docusaurus/core": "2.0.0-rc.1",
+    "@docusaurus/plugin-pwa": "2.0.0-rc.1",
+    "@docusaurus/preset-classic": "2.0.0-rc.1",
+    "@docusaurus/theme-classic": "2.0.0-rc.1",
     "@easyops-cn/docusaurus-search-local": "^0.23.0",
     "@mdx-js/react": "1.6.22",
     "clsx": "1.1.1",
@@ -27,7 +27,7 @@
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.17",
+    "@docusaurus/module-type-aliases": "2.0.0-rc.1",
     "@fec/remark-a11y-emoji": "3.1.0",
     "@tsconfig/docusaurus": "1.0.4",
     "@types/node": "17.0.18",
