--- a/package.json
+++ b/package.json
@@ -21,36 +21,37 @@
     "prepare": "yarn meta:build"
   },
   "dependencies": {
-    "@docusaurus/core": "2.0.0-beta.21",
-    "@docusaurus/plugin-content-docs": "2.0.0-beta.21",
-    "@docusaurus/plugin-content-pages": "2.0.0-beta.21",
-    "@docusaurus/plugin-debug": "2.0.0-beta.21",
-    "@docusaurus/plugin-pwa": "2.0.0-beta.21",
-    "@docusaurus/plugin-sitemap": "2.0.0-beta.21",
-    "@docusaurus/theme-classic": "2.0.0-beta.21",
-    "@docusaurus/theme-common": "2.0.0-beta.21",
-    "@docusaurus/theme-search-algolia": "2.0.0-beta.21",
+    "@docusaurus/core": "2.2.0",
+    "@docusaurus/plugin-content-docs": "2.2.0",
+    "@docusaurus/plugin-content-pages": "2.2.0",
+    "@docusaurus/plugin-debug": "2.2.0",
+    "@docusaurus/plugin-pwa": "2.2.0",
+    "@docusaurus/plugin-sitemap": "2.2.0",
+    "@docusaurus/theme-classic": "2.2.0",
+    "@docusaurus/theme-common": "2.2.0",
+    "@docusaurus/theme-search-algolia": "2.2.0",
+    "@fontsource/jetbrains-mono": "4.5.11",
     "@mdx-js/react": "1.6.22",
-    "clsx": "1.1.1",
-    "prism-react-renderer": "1.3.3",
+    "clsx": "1.2.1",
+    "prism-react-renderer": "1.3.5",
     "react": "17.0.2",
     "react-dom": "17.0.2"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.0.0-beta.21",
-    "@docusaurus/types": "2.0.0-beta.21",
+    "@docusaurus/module-type-aliases": "2.2.0",
+    "@docusaurus/types": "2.2.0",
     "@fec/remark-a11y-emoji": "3.1.0",
     "@tsconfig/docusaurus": "1.0.6",
     "@types/is-ci": "3.0.0",
     "@types/node": "17.0.45",
-    "@types/prettier": "2.6.3",
-    "concurrently": "7.2.2",
-    "esbuild": "0.14.47",
-    "esbuild-loader": "2.19.0",
+    "@types/prettier": "2.7.1",
+    "concurrently": "7.5.0",
+    "esbuild": "0.15.12",
+    "esbuild-loader": "2.20.0",
     "is-ci": "3.0.1",
     "prettier": "2.7.1",
-    "regenerator-runtime": "0.13.9",
-    "typescript": "4.7.4"
+    "regenerator-runtime": "0.13.10",
+    "typescript": "4.8.4"
   },
   "browserslist": {
     "production": [
@@ -67,6 +68,6 @@
   },
   "packageManager": "yarn@3.2.1",
   "resolutions": {
-    "@docusaurus/plugin-content-docs@2.0.0-beta.21": "patch:@docusaurus/plugin-content-docs@npm:2.0.0-beta.21#.yarn/patches/@docusaurus-plugin-content-docs-npm-2.0.0-beta.21-3f331426d5.patch"
+    "@docusaurus/plugin-content-docs@2.2.0": "patch:@docusaurus/plugin-content-docs@npm:2.2.0#.yarn/patches/@docusaurus-plugin-content-docs-npm-2.2.0-34ac512661.patch"
   }
 }
