--- a/.github/workflows/Algolia.yml
+++ b/.github/workflows/Algolia.yml
@@ -10,7 +10,7 @@ jobs:
         uses: actions/checkout@v2
       - name: Upload Records
         # 使用 Action
-        uses: vlssu/docs.vlssu.com@master
+        uses: vlssu/docs-vlssu@master
         # 设置环境变量
         env:
           APPLICATION_ID: ${{secrets.APPLICATION_ID}}
