--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "@docusaurus/plugin-content-docs": "2.2.0",
     "@docusaurus/plugin-content-pages": "2.2.0",
     "@docusaurus/plugin-debug": "2.2.0",
+    "@docusaurus/plugin-google-gtag": "2.2.0",
     "@docusaurus/plugin-pwa": "2.2.0",
     "@docusaurus/plugin-sitemap": "2.2.0",
     "@docusaurus/theme-classic": "2.2.0",
