--- a/package.json
+++ b/package.json
@@ -21,38 +21,38 @@
     "prepare": "yarn meta:build"
   },
   "dependencies": {
-    "@docusaurus/core": "2.4.3",
-    "@docusaurus/plugin-content-docs": "2.4.3",
-    "@docusaurus/plugin-content-pages": "2.4.3",
-    "@docusaurus/plugin-debug": "2.4.3",
-    "@docusaurus/plugin-google-gtag": "2.4.3",
-    "@docusaurus/plugin-pwa": "2.4.3",
-    "@docusaurus/plugin-sitemap": "2.4.3",
-    "@docusaurus/theme-classic": "2.4.3",
-    "@docusaurus/theme-common": "2.4.3",
-    "@docusaurus/theme-search-algolia": "2.4.3",
-    "@fontsource/jetbrains-mono": "4.5.12",
-    "@mdx-js/react": "1.6.22",
-    "clsx": "1.2.1",
-    "prism-react-renderer": "1.3.5",
-    "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "@docusaurus/core": "3.2.1",
+    "@docusaurus/plugin-content-docs": "3.2.1",
+    "@docusaurus/plugin-content-pages": "3.2.1",
+    "@docusaurus/plugin-debug": "3.2.1",
+    "@docusaurus/plugin-google-gtag": "3.2.1",
+    "@docusaurus/plugin-pwa": "3.2.1",
+    "@docusaurus/plugin-sitemap": "3.2.1",
+    "@docusaurus/theme-classic": "3.2.1",
+    "@docusaurus/theme-common": "3.2.1",
+    "@docusaurus/theme-search-algolia": "3.2.1",
+    "@fontsource/jetbrains-mono": "5.0.19",
+    "@mdx-js/react": "3.0.1",
+    "clsx": "2.1.0",
+    "prism-react-renderer": "2.3.1",
+    "react": "18.2.0",
+    "react-dom": "18.2.0"
   },
   "devDependencies": {
-    "@docusaurus/module-type-aliases": "2.4.3",
-    "@docusaurus/types": "2.4.3",
-    "@fec/remark-a11y-emoji": "3.1.0",
-    "@tsconfig/docusaurus": "1.0.7",
+    "@docusaurus/module-type-aliases": "3.2.1",
+    "@docusaurus/types": "3.2.1",
+    "@fec/remark-a11y-emoji": "4.0.2",
+    "@tsconfig/docusaurus": "2.0.3",
     "@types/is-ci": "3.0.0",
-    "@types/node": "17.0.45",
-    "@types/prettier": "2.7.3",
-    "concurrently": "7.6.0",
-    "esbuild": "0.15.18",
-    "esbuild-loader": "2.21.0",
+    "@types/node": "20.12.7",
+    "@types/prettier": "3.0.0",
+    "concurrently": "8.2.2",
+    "esbuild": "0.20.2",
+    "esbuild-loader": "4.1.0",
     "is-ci": "3.0.1",
-    "prettier": "2.8.8",
-    "regenerator-runtime": "0.13.11",
-    "typescript": "4.9.5"
+    "prettier": "3.2.5",
+    "regenerator-runtime": "0.14.1",
+    "typescript": "5.4.5"
   },
   "browserslist": {
     "production": [
@@ -67,8 +67,5 @@
       "last 1 safari version"
     ]
   },
-  "packageManager": "yarn@3.2.1",
-  "resolutions": {
-    "@docusaurus/plugin-content-docs@2.2.0": "patch:@docusaurus/plugin-content-docs@npm:2.2.0#.yarn/patches/@docusaurus-plugin-content-docs-npm-2.2.0-34ac512661.patch"
-  }
+  "packageManager": "yarn@4.1.1"
 }
