--- a/.github/workflows/github-pages.yml
+++ b/.github/workflows/github-pages.yml
@@ -5,16 +5,26 @@ jobs:
     runs-on: ubuntu-latest
     steps:
     - name: Checkout
-      uses: actions/checkout@master
+      uses: actions/checkout@v4
       with:
         fetch-depth: 0
-    - name: Install dependencies
-      run: yarn
+
+    - name: 设置 Node.js
+      uses: actions/setup-node@v4
+      with:
+        node-version: 20
+
+    - name: 安装依赖
+      run: |
+        corepack enable
+        yarn set version stable
+        yarn
+
     - name: Build
       run: yarn run build
     - name: Deploy
       if: github.ref == 'refs/heads/master'
-      uses: peaceiris/actions-gh-pages@v3
+      uses: peaceiris/actions-gh-pages@v4
       with:
         github_token: ${{ secrets.GITHUB_TOKEN }}
         publish_dir: ./build
