--- a/.yarnrc.yml
+++ b/.yarnrc.yml
@@ -1,16 +1,12 @@
-nodeLinker: pnpm
+compressionLevel: mixed
 
-plugins:
-  - path: .yarn/plugins/@yarnpkg/plugin-interactive-tools.cjs
-    spec: "@yarnpkg/plugin-interactive-tools"
-  - path: .yarn/plugins/@yarnpkg/plugin-typescript.cjs
-    spec: "@yarnpkg/plugin-typescript"
+defaultSemverRangePrefix: ""
+
+enableGlobalCache: false
+
+nodeLinker: pnpm
 
 packageExtensions:
   esbuild-loader@*:
     dependencies:
       webpack: ^5.72.1
-
-defaultSemverRangePrefix: ""
-
-yarnPath: .yarn/releases/yarn-3.2.1.cjs
